--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -7,4 +7,4 @@ jobs:
       - name: step1
         run: echo "Hello World!"
       - name: step2
-        run: apt install net-tools
+        run: mkdir project1
