--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -1,12 +1,24 @@
-name: hello-world-pipeline
-on: push
+name: build-deploy-pipeline
+on:
+ push:
+  branches: [main]
 jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
-      - name: step1
-        run: echo "Hello World!"
-      - name: step2
-        run: mkdir project1
-      - name: step3
-        run: echo "wellcome to github"
+      - name: checked code
+        uses: actions/checkout@v3
+      - name: Access the azure vm using ssh
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.ssh }}
+      - name: create directory
+        run: mkdir -p ~/.ssh
+      - name: Move the private key into the directory
+        run: echo "$SSH_PRIVATE_KEY" > ~/.ssh/id
+      - name: assign the permission to this directory
+        run: chmod 666 ~/.ssh/id
+
+      - name: connect to vm
+        run: ssh -i azureuser@20.48.186.93
+      - name: Display the message
+        run: echo "successfully connected to vm"
