--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -24,7 +24,6 @@ jobs:
 
       - name: add host to known hosts
         run: ssh-keyscan -H 20.48.186.93 >> ~/.ssh/known_hosts
-        
       - name: connect to vm
         run: |
          ssh -i ~/.ssh/id_rsa azureuser@20.48.186.93 << 'EOF'
@@ -32,26 +31,18 @@ jobs:
          uname -a
          echo "This is SSH machine"
          cd /opt
-         
-         # Clone or pull repo
-         if [ -d "Node-Express-Basic-Application" ]; then
-           cd Node-Express-Basic-Application
-           sudo git pull
-         else
-           sudo git clone https://github.com/muzammil-hue/Node-Express-Basic-Application.git
-           cd Node-Express-Basic-Application
-         fi
-
-         # Fix permissions for npm
-         sudo chown -R $(whoami) .
-
-         # Install Node.js and npm if not already installed
-         sudo apt update
-         sudo apt install nodejs npm -y
-
-         # Install dependencies and build
-         npm install
-         npm run build
+         sudo git clone https://github.com/muzammil-hue/Node-Express-Basic-Application.git
+         ls /opt
+         sudo cd Node-Express-Basic-Application/
+         sudo apt install npm -y
+         ls
          EOF
-         npm run build
+      # - name: clone the project
+      #   run: git clone https://github.com/muzammil-hue/Node-Express-Basic-Application.git
+      # - name: install dependencies
+      #   run: npm install
+      # - name: build the project
+      #   run: npm run build
+        
+      
          EOF
