--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -31,9 +31,17 @@ jobs:
          echo -e "\e[31mLogged in to VM\e[0m"
          cd /opt
          EOF
-      # - name: clone the project
-      #   run: git clone https://github.com/muzammil-hue/Node-Express-Basic-Application.git
-      # - name: install dependencies
-      #   run: npm install
+      - name: clone the project
+        run: git clone https://github.com/muzammil-hue/Node-Express-Basic-Application.git
+         
+      - name: install dependencies
+        run: npm install
+      - name: build the project
+        run: npm run build
+
+
+
+
+        
       # - name: build the project
       #   run: npm run build
