--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -36,10 +36,6 @@ jobs:
          
       - name: install dependencies
         run: npm install
-
-
-
-
         
-      # - name: build the project
-      #   run: npm run build
+      - name: start the project
+        run: npm run start
