--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -39,3 +39,7 @@ jobs:
         
       - name: start the project
         run: node index.js
+      - name: testing
+        run: localhost:3000
+      - name: testing with endpoint
+        run: localhost:3000/hello
