--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -38,8 +38,5 @@ jobs:
         run: npm install
         
       - name: start the project
-        run: node index.js
-      - name: testing
-        run: localhost:3000
-      - name: testing with endpoint
-        run: localhost:3000/hello
+        run: npm start
+     
