--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -39,4 +39,6 @@ jobs:
         
       - name: start the project
         run: npm run
+      - name: test the application
+        run: localhost:3000/hello
      
