--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -38,6 +38,7 @@ jobs:
         run: npm install
         
       - name: start the project
-        run: npm start
+        run: node index.js
+        
    
      
