--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -36,6 +36,9 @@ jobs:
 
       - name: pull the code
         run: git pull origin main
+
+      - name: push the code
+        run: git push origin main
          
       - name: install dependencies
         run: npm install
