--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
      SSH_PRIVATE_KEY: ${{ secrets.ssh }}
+     Github_username: ${{secrets.username}}
+     Github_password: ${{secrets.password}}
     steps:
       - name: checked code
         uses: actions/checkout@v3
@@ -38,7 +40,7 @@ jobs:
         run: git pull origin main
 
       - name: push the code
-        run: sudo git push origin main
+        run: git push origin main
          
       - name: install dependencies
         run: npm install
