--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: checked code
         uses: actions/checkout@v3
+        with:
+              token: ${{secrets.sgithub.token}}
  
       - name: create directory
         run: mkdir -p ~/.ssh
@@ -36,11 +38,7 @@ jobs:
 
       - name: pull the code
         run: git pull origin main
-
-        env:
-          Github_username: ${{secrets.username}}
-          Github_password: ${{secrets.password}}
-
+        
       - name: push the code
         run: git push origin main
          
