--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -27,15 +27,14 @@ jobs:
       - name: clone the project
         run: |
          ssh -i ~/.ssh/id_rsa azureuser@20.48.186.93 << 'EOF'
-         sudo rm -rf /opt/Node-Express-Basic-Application
-         sudo cd /opt
+         sudo rm -rf ./Node-Express-Basic-Application
          git clone https://github.com/muzammil-hue/Node-Express-Basic-Application.git
          EOF
          
       - name: pull the code
         run: |
          ssh -i ~/.ssh/id_rsa azureuser@20.48.186.93 << 'EOF'
-         sudo cd /opt/Node-Express-Basic-Application
+         cd ./Node-Express-Basic-Application
          git pull origin main
          EOF
         
@@ -43,7 +42,7 @@ jobs:
       - name: install dependencies
         run: |
          ssh -i ~/.ssh/id_rsa azureuser@20.48.186.93 << 'EOF'
-         sudo cd /opt/Node-Express-Basic-Application
+         cd ./Node-Express-Basic-Application
          sudo  npm install -g pm2
          EOF
 
@@ -51,7 +50,7 @@ jobs:
       - name: start the project
         run: |
          ssh -i ~/.ssh/id_rsa azureuser@20.48.186.93 << 'EOF'
-         sudo cd /opt/Node-Express-Basic-Application
+         cd ./Node-Express-Basic-Application
          sudo pm2 start index.js
          sudo pm2 list
          EOF
